Fixed scrollbar

--- a/izvorniKod/angular-geofighter/src/styles.css
+++ b/izvorniKod/angular-geofighter/src/styles.css
@@ -5,7 +5,7 @@ html{
 }
 body{
   margin-top: 63px;
-  height: 100%;
+  /*height: 100%;*/
 }
 
 input.ng-invalid.ng-touched {
@@ -33,7 +33,7 @@ input.ng-invalid.ng-touched {
 }
 
 .font{
-  font-family: Verdana, Geneva, Tahoma, sans-serif; 
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 
